fix: tooltip spacing x

--- a/packages/bootstrap/scss/abstracts/_variables.scss
+++ b/packages/bootstrap/scss/abstracts/_variables.scss
@@ -319,7 +319,7 @@ $nav-tabs-link-active-color: $gray-600 !default;
 
 /* Tooltip */
 $tooltip-padding-y: $spacer-8 !default;
-$tooltip-padding-x: $spacer-8 !default;
+$tooltip-padding-x: $spacer-12 !default;
 $tooltip-arrow-width: 1.6rem !default;
 $tooltip-arrow-height: 0.8rem !default;
 $tooltip-opacity: 0.8 !default;
